@@ -18,6 +18,8 @@ Build-Depends: debhelper (>= 10),
                libxdamage-dev,
                libxcomposite-dev (>= 1:0.4),
                libxrandr-dev (>= 2:1.2),
+               xauth <!nocheck>,
+               xvfb <!nocheck>,
                gobject-introspection (>= 1.33.4-1~),
                libgirepository1.0-dev (>= 0.9.12),
                libgstreamer-plugins-base1.0-dev
